--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.0.7",
-    "standard": "^16.0.4",
-    "typescript": "^4.5.4",
-    "vite": "^2.8.0"
+    "@types/react": "17.0.33",
+    "@types/react-dom": "17.0.10",
+    "@vitejs/plugin-react": "1.0.7",
+    "standard": "16.0.4",
+    "typescript": "4.5.4",
+    "vite": "2.8.0"
+  },
+  "-eslintConfig": {
+    "extends": ["./node_modules/standard/eslintrc.json"]
   }
 }
